[gd_scene load_steps=3 format=3 uid="uid://doaav5xf7vpw"]

[ext_resource type="Script" path="res://UI/Score Screen/score_screen.gd" id="1_g36i5"]
[ext_resource type="Theme" uid="uid://2rt3ux601me2" path="res://UI/ui_theme.tres" id="1_tuwgb"]

[node name="ScoreScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1155.0
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.556837, 0.904249)
size_flags_horizontal = 6
theme = ExtResource("1_tuwgb")
script = ExtResource("1_g36i5")

[node name="ScoreProgressBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.552
anchor_right = 0.502
anchor_bottom = 0.552
offset_left = -234.787
offset_top = -18.3995
offset_right = 238.037
offset_bottom = 17.6005
grow_horizontal = 2
grow_vertical = 2

[node name="TotalScoreLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -362.0
offset_top = -66.0
offset_right = 362.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.449
anchor_top = 0.631
anchor_right = 0.56
anchor_bottom = 0.758
offset_left = -0.0922852
offset_top = 0.31366
offset_right = -0.360229
offset_bottom = 0.170654
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="RestartGameButton" type="Button" parent="BoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_tuwgb")
text = "Restart Game"

[node name="MainMenuButton" type="Button" parent="BoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Main Menu"
